--- a/public/index.html
+++ b/public/index.html
@@ -99,12 +99,15 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
   </head>
   <body>
+    
     <div id="root">
         <div class="loader-container">
             <div class="loader">Loading...</div>
         </div>
     </div>
     <!--
+      Test
+      
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
